# TFT_RAG_DISECAN

./: .env  .gitignore  README.md  docker-compose.sample.yml  docker-compose.yml  preguntas_test.txt  pyproject.toml  test_prompts.txt  test_rag.py  test_results.txt
assets/: lemma_cache.json
data/corpus/: documentos_sample.txt  frases_sample.txt
database/: DumpDiSeCanEstructura.sql  create_sample.py  verify.py  verify_db.py
docs/: agentic_rag_flow.md
docs/Memoria-TFG-DavidSuarez/: Implementacion.tex  Introduccion.tex  Portada.tex  Resumen.tex  main.aux  main.glo  main.lof  main.lot  main.out  main.tex  main.toc  ref.bib
docs/design/: architecture_diagram.md  erDiagram.md  mockup.md  sequence_diagram.md
scratch/: check_chroma.py
src/: ingestion_run.py  main.py  test_advanced_search.py
src/backend/: app.py  byte_reader.py  chroma_store.py  db.py  embedder.py  ingestion.py  lemmatizer.py  orchestrator.py  query_analyzer.py  reranker.py  retriever.py
src/frontend/: app.js  index.html  style.css
src/scripts/: check_cats.py  clean_db_encoding.py  create_sample.py  test_disecan_search.py
