[project]
name = "tft-rag-disecan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.55.0",
    "flask[async]>=3.1.0",
    "flask-cors>=5.0.0",
    "mysql-connector-python>=9.6.0",
    "python-dotenv>=1.2.2",
    "chromadb>=1.5.7",
    "tiktoken>=0.12.0",
    "sentence-transformers>=5.4.0",
    "rank-bm25>=0.2.2",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-retrievers-bm25>=0.4.0",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
    "zeep>=4.3.2",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
